--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,10 +1,10 @@
-
 <section id="form"><!--form-->
   <div class="container">
-    <div class="row">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div class="row">
       <div class="col-sm-4 col-sm-offset-4">
         <div class="login-form"><!--Forget password form-->
-    
           <h2>Forgot your password?</h2>
           <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
               <%= devise_error_messages! %>
@@ -12,11 +12,12 @@
             <span>
               <%= f.check_box :remember_me,class:"checkbox" %>
               Keep me signed in
-            </span><%= f.submit "Send me reset password instructions",class:"btn btn-primary" %>
+            </span><%= f.button "Send me reset password instructions",type: "submit", class:"btn btn-default" %>
           <% end %>
-          <%= render "devise/shared/links" %>
         </div><!--/-Forget password  form-->
       </div>
+      </div>
+        </div>
       </div>
     </div>
   </div>
