--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,19 +87,6 @@
                     <i class="fa fa-shopping-cart"></i> Cart<span id="cart-item-count"><% if customer_signed_in? && current_customer.cart_items.present? %> (<%= current_customer.cart_items.count %>)<% end %></span>
                   <% end %>
                 </li>
-                <%# if customer_signed_in? && current_customer.cart_items.present? %>
-                  <%# if current_page?checkouts_path %>
-                    <%# active2 = "active" %>
-                  <%# else %>
-                    <%# active2 = ""%> 
-                  <%# end %>
-<!-- 
-                  <li>
-                    <%#= link_to(checkouts_path, class: "#{active2}") do %>
-                      <i class="fa fa-crosshairs"></i> Checkout
-                    <%# end %>
-                  </li> -->
-                <%# end %>
                 <% if customer_signed_in? %>
                   <li>
                     <%= link_to(destroy_customer_session_path, :method => :delete) do %>  <i class="fa fa-sign-out"></i>Logout  
@@ -166,7 +153,7 @@
                     </div>
                     <div class="mainmenu pull-left">
                       
-                      <% if current_page?(url_for(:controller => 'home', :action => 'index')) %>
+                      <% if current_page?root_path %>
                         <% active = "active" %>
                       <% else %>
                         <% active = ""%> 
@@ -174,20 +161,7 @@
 
                       <ul class="nav navbar-nav collapse navbar-collapse">
                         <li><%= link_to "Home", root_path, class: "#{active}" %></li>
-                        <li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
-                          <ul role="menu" class="sub-menu">
-                              <li><%= link_to(root_path) do %>Products<% end %></li>
-                              <li><a href="#">Product Details</a></li> 
-                              <li><%= link_to(checkouts_path) do %>Checkout<% end %></li> 
-                              <li><%=link_to(cart_items_path) do %>Cart<% end %></li> 
-                          </ul>
-                        </li> 
-                        <li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
-                          <ul role="menu" class="sub-menu">
-                            <li><a href="#">Blog List</a></li>
-                            <li><a href="#">Blog Single</a></li>
-                          </ul>
-                        </li> 
+                        <li class="dropdown"><a href="#"> 
                         <li><%= link_to(contacts_path) do %>Contact<% end %></li>
                       </ul>
                     </div>
