add Coupon managment funtionlity and remove unwanted files and add files after code refactor

--- a/app/views/cart_items/_total_area.html.erb
+++ b/app/views/cart_items/_total_area.html.erb
@@ -2,62 +2,43 @@
 <div class="container">
   <div class="heading">
     <h3>What would you like to do next?</h3>
-    <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
+    
   </div>
   <div class="row">
     <div class="col-sm-6">
-      <div class="chose_area">
-        <ul class="user_option">
-          <li>
-            <input type="checkbox">
-            <label>Use Coupon Code</label>
-          </li>
-          <li>
-            <input type="checkbox">
-            <label>Use Gift Voucher</label>
-          </li>
-          <li>
-            <input type="checkbox">
-            <label>Estimate Shipping & Taxes</label>
-          </li>
-        </ul>
-        <ul class="user_info">
-          <li class="single_field">
-            <label>Country:</label>
-            <select>
-              <option>United States</option>
-              <option>Bangladesh</option>
-              <option>UK</option>
-              <option>India</option>
-              <option>Pakistan</option>
-              <option>Ucrane</option>
-              <option>Canada</option>
-              <option>Dubai</option>
-            </select>
-            
-          </li>
-          <li class="single_field">
-            <label>Region / State:</label>
-            <select>
-              <option>Select</option>
-              <option>Dhaka</option>
-              <option>London</option>
-              <option>Dillih</option>
-              <option>Lahore</option>
-              <option>Alaska</option>
-              <option>Canada</option>
-              <option>Dubai</option>
-            </select>
-          
-          </li>
-          <li class="single_field zip-field">
-            <label>Zip Code:</label>
-            <input type="text">
-          </li>
-        </ul>
-        <a class="btn btn-default update" href="">Get Quotes</a>
-        <a class="btn btn-default check_out" href="">Continue</a>
-      </div>
+      <% if !session[:applied_coupon].present? %>
+        <div class="chose_area" id="coupan-apply">
+          <div class="row">
+            <div class="col-sm-3 col-sm-offset-1">
+              <strong >Coupan Code : </strong>
+            </div>
+            <div class="col-sm-3 ">
+              <%= text_field_tag :coupan,"", id: "coupon" %><br>
+            </div>
+
+            <div class="col-sm-3">
+              <%= button_tag "Apply Coupan", class: "btn btn-default update", onclick: "use_coupon()" %>
+            </div>
+          </div>
+            <div id="invalid-message" style="color:red" class="col-sm-4 col-sm-offset-4"></div> 
+        </div>
+
+      <% else %>
+        <div class="chose_area" id="coupan-used" >
+          <div class="row">
+            <% coupon = session[:applied_coupon]%>
+            <div class="col-sm-3 col-sm-offset-1">
+              Applied Coupon
+            </div>
+            <div class="col-sm-3">
+              <%=text_field_tag :coupon, "#{coupon}", id: "used-coupon", disabled: true %><br>
+            </div>
+            <div class="col-sm-5">
+              <%= button_tag "Delete coupan", class: "btn btn-default update", onclick: "delete_coupon()" %>
+            </div>
+          </div>
+        </div>
+      <% end %>
     </div>
     <div class="col-sm-6">
       <div class="total_area">
@@ -65,9 +46,9 @@
           <li>Cart Sub Total <span> <%= @cart_sub_total %></span></li>
           <li>Eco Tax <span><%= @tax %>  </span></li>
           <li>Shipping Cost <span><%=  @shipping_cost1 %></span></li>
+          <li>Discount <span><%=  @discount %></span></li>
           <li>Total <span>&#8377; <%= @total %></span></li>
         </ul>
-          <a class="btn btn-default update" href="#">Update</a>
             <%= link_to(checkouts_path, class: "btn btn-default check_out") do %>Check Out<% end %>
       </div>
     </div>
