--- a/app/views/checkouts/index.html.erb
+++ b/app/views/checkouts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="breadcrumbs">
       <ol class="breadcrumb">
-        <li><a href="#">Home</a></li>
+        <li><%=link_to(root_path) do %>Home<% end %></li>
         <li class="active">Check out</li>
       </ol>
     </div><!--/breadcrums-->
@@ -14,11 +14,7 @@
       <div class="row">
         <div class="col-sm-12 clearfix">
           <div class="bill-to create-address">
-            <div class="row">
-              <%if current_customer.addresses.present? %>
-                <%= render "address"%> 
-              <% end %>
-            </div>
+            <%= render "address"%> 
             <div class="col-sm-12 create-address">
               <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">Add new Address</button>
             </div>
