made changes in branda controller

--- a/app/views/cart_items/_total_area.html.erb
+++ b/app/views/cart_items/_total_area.html.erb
@@ -10,7 +10,7 @@
         <div class="chose_area" id="coupan-apply">
           <div class="row">
             <div class="col-sm-3 col-sm-offset-1">
-              <strong >Coupan Code : </strong>
+              <strong >Coupon Code : </strong>
             </div>
             <div class="col-sm-3 ">
               <%= text_field_tag :coupan,"", id: "coupon" %><br>
