--- a/app/views/components/_left_side_bar.html.erb
+++ b/app/views/components/_left_side_bar.html.erb
@@ -3,7 +3,7 @@
     <h2>Category</h2>
     <div class="panel-group category-products" id="accordian"><!--category-productsr-->
       <% @categories.each do |category| %>
-        <% if !category.category_id.present? %>
+        <% if category.category_id.blank? %>
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
