--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,41 @@
-<p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<html>
+<head>
+  <title>EShopper</title>
+  <style type="text/css">
+    *{margin:0px; padding:0; font-family:arial; color:#232323; font-size:14px;}
+  </style>
+</head>
+<body>
+  <table style="border:1px solid #f1f1f1; margin:auto; text-align:center;" width="800" align="center" bgcolor="#ffffff" border="0" cellspacing="0" cellpadding="0">
+    <tbody>
+      <tr>
+        <td style="padding:15px;" align="left">
+          <h4 style="margin:15px;text-decoration:underline" align="center">Forget Password</h4>
+          <h6 style="line-height: 200%;">
+            <span style="text-decoration:underline">From: </span>
+            <span style="text-decoration:underline"> EShopper</span> </h6>
+          <p><span style="text-decoration:underline;line-height: 200%;"><strong>Subject:</strong></span> Password Reset Confirmation for <%= @resource.first_name.present? ? @resource.first_name :  @resource.email %>.</p>
+          <p>Dear <%= @resource.first_name.present? ? @resource.first_name :  @resource.email %>, </p>
+          <p style="line-height: 200%;">
+            &#09;&#09;There was recently a request to change the password for your account.</p>
+            <p style="line-height: 200%;">
+            If you requested this password change, please click on the following link to reset your password:
+            <%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %>
+            If clicking on the link does not work, please copy and paste the URL into your browser instead.
+            If you did not make this request, you can ignore this message and your password will remain the same.
+            If you have any questions about your account or any other matter, please feel free to contact us at
+            <%= link_to(contacts_path) do %>support@eshopper.com.<% end %>
+          </p>
+          <p style="line-height: 200%;"><strong>Note: </strong> Please do not reply back to this mail. This is sent from an unattended mail box.This e-mail was sent from EShopper.</p>
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td style="background:#f4f4f4; padding:15px 0; text-align:center; color:#777;">&copy; EShopper, 2017 · All Rights Reserved.<%=link_to("http://localhost:3000/contacts", style: "color:#052B48;text-decoration:none", target: "_blank") do %> eshopper.com <% end %></td>
+      </tr>
+    </tfoot>
+  </table>
+</body>
+</html>
