--- a/app/views/customer_mailer/welcome_email.html.erb
+++ b/app/views/customer_mailer/welcome_email.html.erb
@@ -1,19 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    
-    <%= image_tag attachments['logo.png'].url -%>
-    <h4>Welcome to <%=link_to(@url) do%>eshopper.com<% end %>, <%= @customer.first_name %></h4>
-    <p>
-      You have successfully signed up to E-Shopper.com, <%= @customer.first_name %>
-      your username is: <%= @customer.email %>.<br>
-    </p>
-    <p>
-      To login to the site, just follow this link: <%=link_to(@url) do%>eshopper.com<% end %>, <%= @customer.first_name %>.
-    </p>
-    <p>Thanks for joining and have a great day!</p>
-  </body>
+<head>
+  <title>EShopper</title>
+  <style type="text/css">
+    *{margin:0px; padding:0; font-family:arial; color:#232323; font-size:14px;}
+  </style>
+</head>
+<body>
+  <table style="border:1px solid #f1f1f1; margin:auto; text-align:center;" width="800" align="center" bgcolor="#ffffff" border="0" cellspacing="0" cellpadding="0">
+    <thead>
+      <tr>
+        <td style="border-bottom: 5px solid #FE980F; padding: 15px 0; text-align: center;">
+          <table width="800" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+              <td width="100%" valign="top" align="center"><a href="#" style="border:none; padding-left:15px;"><%= image_tag attachments['logo.png'].url -%></td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="padding:15px;" align="left">
+          <p style="margin:15px;">Hello User,</p>
+
+          <p style="margin:15px;">Thanks for Registration with EShopper.<br>
+          Email: <%= @customer.email %><br> 
+         </p>
+
+          <p style="margin:15px;"><b>Note</b> : Please do not reply back to this mail. This is sent from an unattended mail box.</p>
+          <p style="margin:15px;">This e-mail was sent from EShopper <%=link_to(@url, style: "color:#052B48;text-decoration:none", target: "_blank") do%>(http://madhu-eshopper.herokuapp.com/)<% end %></a></p>
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td style="background:#f4f4f4; padding:15px 0; text-align:center; color:#777;">&copy; EShopper, 2017 · All Rights Reserved.<%=link_to(@url, style: "color:#052B48;text-decoration:none", target: "_blank") do %> eshopper.com <% end %></td>
+      </tr>
+    </tfoot>
+  </table>
+</body>
 </html>
