Code refactor and remove unwanted files

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -22,8 +22,8 @@
             <h2 class="title text-center">Contact Info</h2>
             <address>
               <p>E-Shopper Inc.</p>
-            <p>935 W. Webster Ave New Streets Chicago, IL 60614, NY</p>
-            <p>Newyork USA</p>
+            <p>NeoSOFT Technologies, 4th Floor, The Ruby, 29, Senapati Bapat Marg, Dadar (West) Mumbai- 400-028</p>
+            <p>MUMBAI INDIA</p>
             <p>Mobile: +2346 17 38 93</p>
             <p>Fax: 1-714-252-0026</p>
             <p>Email: info@e-shopper.com</p>
@@ -130,8 +130,8 @@
             <h2 class="title text-center">Contact Info</h2>
             <address>
               <p>E-Shopper Inc.</p>
-            <p>935 W. Webster Ave New Streets Chicago, IL 60614, NY</p>
-            <p>Newyork USA</p>
+             <p>NeoSOFT Technologies, 4th Floor, The Ruby, 29, Senapati Bapat Marg, Dadar (West) Mumbai- 400-028</p>
+            <p>MUMBAI INDIA</p>
             <p>Mobile: +2346 17 38 93</p>
             <p>Fax: 1-714-252-0026</p>
             <p>Email: info@e-shopper.com</p>
