--- a/app/views/charges/payment_success.html.erb
+++ b/app/views/charges/payment_success.html.erb
@@ -34,10 +34,6 @@
       </div>
       <div class="row">
         <div class="col-xs-6">
-          <address>
-            <strong>Payment Method:</strong><br>
-            Visa ending **** 4242<br>
-          </address>
         </div>
         <div class="col-xs-6 text-right">
         </div>
@@ -84,6 +80,12 @@
                     <td class="no-line"></td>
                     <td class="no-line text-center"><strong>Shipping</strong></td>
                     <td class="no-line text-right"><%= @shipping_cost1 %></td>
+                  </tr>
+                  <tr>
+                    <td class="no-line"></td>
+                    <td class="no-line"></td>
+                    <td class="no-line text-center"><strong>Discount</strong></td>
+                    <td class="no-line text-right"><%= @discount %></td>
                   </tr>
                    <tr>
                     <td class="no-line"></td>
