--- a/app/views/customer_orders/order_detail.html.erb
+++ b/app/views/customer_orders/order_detail.html.erb
@@ -61,8 +61,14 @@
                 <tr>
                   <td class="thick-line"></td>
                   <td class="thick-line"></td>
-                  <td class="thick-line text-center"><strong>Subtotal</strong></td>
+                  <td class="thick-line text-center"><strong>Sub-total</strong></td>
                   <td class="thick-line text-right">&#8377;<%= @order_sub_total %></td>
+                </tr>
+                <tr>
+                  <td class="no-line"></td>
+                  <td class="no-line"></td>
+                  <td class="no-line text-center"><strong>Discount</strong></td>
+                  <td class="no-line text-right">-&#8377;<%= @discount %></td>
                 </tr>
                 <tr>
                   <td class="no-line"></td>
@@ -77,12 +83,7 @@
                   <td class="no-line text-right">&#8377;<%= @tax %></td>
                 </tr>
                  </tr>
-                 <tr>
-                  <td class="no-line"></td>
-                  <td class="no-line"></td>
-                  <td class="no-line text-center"><strong>Discount</strong></td>
-                  <td class="no-line text-right">-&#8377;<%= @discount %></td>
-                </tr>
+                 
                 <tr class="cancel-button cancel-payment">
                   <td class="no-line " ><%if @customer_order.status !="delivered" &&  @customer_order.status !="failed" &&  @customer_order.status != "cancel" %><%= link_to "Cancel Order", cancel_order_customer_order_path(@customer_order),  class: "btn btn-default" %><% end %>&nbsp;&nbsp;
                     <%if @customer_order.status == "shipped" || @customer_order.status == "intransit" || @customer_order.status == "success" || @customer_order.status == "delivered" %>
