made changes in mailer templates

--- a/app/views/components/_left_side_bar.html.erb
+++ b/app/views/components/_left_side_bar.html.erb
@@ -17,7 +17,7 @@
                 </a>
               </h4>
             </div>
-            <div id="<%= category.id %>" class=" collapse <%= category.id == @category.id ? 'in' : '' %>" >
+            <div id="<%= category.id %>" class=" collapse <%= category.id == @category.id ? 'in' : '' if @category.present? %>" >
               <% if category.brands.present? %>
                 <div class="panel-body">
                   <ul>
