--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -15,18 +15,25 @@
           <h6 style="line-height: 200%;">
             <span style="text-decoration:underline">From: </span>
             <span style="text-decoration:underline"> EShopper</span> </h6>
-          <p><span style="text-decoration:underline;line-height: 200%;"><strong>Subject:</strong></span> Password Reset Confirmation for <%= @resource.first_name.present? ? @resource.first_name :  @resource.email %>.</p>
+          <p style="line-height: 200%;"><span style="text-decoration:underline;"><strong>Subject</strong></span><strong> : </strong> <span style="text-decoration:underline;">Password Reset Confirmation for <%= @resource.first_name.present? ? @resource.first_name :  @resource.email %>.</span></p>
           <p>Dear <%= @resource.first_name.present? ? @resource.first_name :  @resource.email %>, </p>
           <p style="line-height: 200%;">
             &#09;&#09;There was recently a request to change the password for your account.</p>
-            <p style="line-height: 200%;">
+          <p style="line-height: 200%;">
             If you requested this password change, please click on the following link to reset your password:
             <%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %>
+          </p>
+          <p style="line-height: 200%;">
             If clicking on the link does not work, please copy and paste the URL into your browser instead.
+          </p>
+          <p style="line-height: 200%;">
             If you did not make this request, you can ignore this message and your password will remain the same.
+          </p>
+          <p style="line-height: 200%;">
             If you have any questions about your account or any other matter, please feel free to contact us at
             <%= link_to(contacts_path) do %>support@eshopper.com.<% end %>
           </p>
+          <br><br>
           <p style="line-height: 200%;"><strong>Note: </strong> Please do not reply back to this mail. This is sent from an unattended mail box.This e-mail was sent from EShopper.</p>
         </td>
       </tr>
