--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,35 @@
-<p>Hello <%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<html>
+  <head>
+    <title>EShopper</title>
+    <style type="text/css">
+      *{margin:0px; padding:0; font-family:arial; color:#232323; font-size:14px;}
+    </style>
+  </head>
+  <body>
+    <table style="border:1px solid #f1f1f1; margin:auto; text-align:center;" width="800" align="center" bgcolor="#ffffff" border="0" cellspacing="0" cellpadding="0">
+      <tbody>
+        <tr>
+          <td style="padding:15px;" align="left">
+            <h4 style="margin:15px;text-decoration:underline" align="center">Password Update Successful</h4>
+            <h6 style="line-height: 200%;">
+              <span style="text-decoration:underline"> Password Update Successful </span>
+             </h6>
+            <h6 style="line-height: 200%;">
+              <span style="text-decoration:underline">From: </span>
+              <span style="text-decoration:underline"> EShopper</span> </h6>
+            <p style="line-height: 200%;"><span style="text-decoration:underline;"><strong>Subject:</strong></span> </strong>Password Update Confirmation for <%= @resource.first_name.present? ? @resource.first_name :  @resource.email %>.</strong></p>
+            <p>Dear <%= @resource.first_name.present? ? @resource.first_name :  @resource.email %>, </p>
+            <p style="line-height: 260%;">
+              &#09;&#09;You have successfully updated password for your account.</p>
+            <p style="line-height: 260%;">
+              If you did not make this request, you can again change password for your account again.
+            </p>
+            <p style="line-height: 260%;">
+              If you have any questions about your account or any other matter, please feel free to contact us at madhupatidar909@gmail.com.
+            </p>
+        </tr>
+      </tbody>
+    </table>
+  </body>
+</html>
