--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -40,7 +40,7 @@
     </tbody>
     <tfoot>
       <tr>
-        <td style="background:#f4f4f4; padding:15px 0; text-align:center; color:#777;">&copy; EShopper, 2017 · All Rights Reserved.<%=link_to("http://localhost:3000/contacts", style: "color:#052B48;text-decoration:none", target: "_blank") do %> eshopper.com <% end %></td>
+        <td style="background:#f4f4f4; padding:15px 0; text-align:center; color:#777;">&copy; EShopper, 2017 · All Rights Reserved.<%=link_to("http://madhu-eshopper.herokuapp.com/contacts", style: "color:#052B48;text-decoration:none", target: "_blank") do %> eshopper.com <% end %></td>
       </tr>
     </tfoot>
   </table>
