made changes in Application layout and devise

--- a/app/views/cart_items/_total_area.html.erb
+++ b/app/views/cart_items/_total_area.html.erb
@@ -34,7 +34,7 @@
               <%=text_field_tag :coupon, "#{coupon}", id: "used-coupon", disabled: true %><br>
             </div>
             <div class="col-sm-5">
-              <%= button_tag "Delete coupan", class: "btn btn-default update", onclick: "delete_coupon()" %>
+              <%= button_tag "Remove coupon", class: "btn btn-default update", onclick: "delete_coupon()" %>
             </div>
           </div>
         </div>
